--- a/index.html
+++ b/index.html
@@ -4,13 +4,41 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Paginale - IT Services, Mobile apps, Web2.0 and Web3.0 Apps</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Paginale is an IT company that provides IT services and solutions of all types, construction of mobile applications and web applications, and also offers web3.0 services such as building tokens and crypto games.">
 
+    <meta name="keywords" content="
+    It company in morocco,
+    Software engineering,
+    Creative company,
+    digital marketing,
+    web design,
+    web development,
+    web application company,
+    web application in morocco,
+    web application,
+    web design company,
+
+    mobile app development,
+    mobile app design,
+    mobile app development in morocco,
+    mobile app design in morocco,
+    blockchain,
+    blockchain development,
+    e-commerce,
+    cod solutions
+    ">
+    <meta property="og:description" content="Paginale Is An It company in Morocco that build softwares, websites and mobile application paginale help businesses to grow their audience">
+    <meta property="og:locale" content="en" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Paginale" />
+
+    <title>Paginale - IT Services, Mobile apps, Web2.0 and Web3.0 Apps</title>
+
     <!-- css link -->
     <!-- favicon icon -->
-    <link rel="icon" type="images/png" href="images/favicon.png" />
+    <link rel="icon" type="images/png" href="images/small_logo.png" />
     <!-- bootstrap min css -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- owl carousel min css -->
@@ -45,7 +73,7 @@
                     <div class="col-lg-7 social-left-col">
                         <div class="social-left-area">
                             <ul>
-                                <li><a href="tel:+21252222222"><i class="fas fa-phone-alt"></i>+212 5 222 222</a></li>
+                                <li><a href="tel:+212687392174"><i class="fas fa-phone-alt"></i>+212 687 392 174</a></li>
                                 <li><a href="mailto:contact@paginale.com"><i class="fas fa-location-arrow"></i>contact@paginale.com</a></li>
                             </ul>
                         </div>
@@ -71,7 +99,7 @@
                     <div class="col-lg-3 logo-col">
                         <div class="menu-logo-area">
                             <a href="#">
-                                <img src="images/small_logo.png" style="" alt="menu logo "></a>
+                                <img src="images/full_logo.png" alt="logo paginale "></a>
                         </div>
                     </div>
                     <div class="col-lg-9 menu-col align-self-center">
@@ -535,6 +563,37 @@
                     <div class="testimonial-item-col">
                         <div class="testimonial-single-item">
                             <div class="testimonial-item-header">
+                                <img class="testimonial-img" src="images/joly.png" alt="joly">
+                                <div class="testimonial-header-position">
+                                    <h3>Ismail<img src="images/check.png" alt="check icon"> </h3>
+                                    <p>CEO, NHILA INFO</p>
+                                    <ul class="star-icon">
+                                        <li>
+                                            <a href="#"><img src="images/star-icon.png" alt="star icon"></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><img src="images/star-icon.png" alt="star icon"></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><img src="images/star-icon.png" alt="star icon"></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><img src="images/star-icon.png" alt="star icon"></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><img src="images/star-icon.png" alt="star icon"></a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <h4>Love it !!!</h4>
+                            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="testimonial-item-col">
+                        <div class="testimonial-single-item">
+                            <div class="testimonial-item-header">
                                 <img class="testimonial-img" src="images/rock.png" alt="rock">
                                 <div class="testimonial-header-position">
                                     <h3>Said<img src="images/check.png" alt="check icon"> </h3>
@@ -614,8 +673,8 @@
                     <div class="section-title">
                         <h2><span>Subscribe</span>Our Newsletter</h2>
                     </div>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the major ity have suffered alteration in some form, by injected humour, or rand om ised words which don't look even slightly believable. If you are going to use a
-                        pass age of Lorem Ipsum, you need to be sure there isn't anything embarrass ing hidden in the middle of text. All the Lorem Ipsum generators on the Inter net tend to repeat</p>
+                    <p>Don't miss this opportunity. Always stay up to date with our novelties and our latest solutions on the market
+                    </p>
                     <form>
                         <div class="web-adress-input">
                             <input type="email" placeholder="Your Email Address" required="">
@@ -657,10 +716,10 @@
                 <div class="col-lg-4 col-md-6 footer-item-col-1 footer-item-col">
                     <div class="single-footer-item">
                         <div class="footer-content">
-                            <!-- <div class="footer-logo">
-                                <a href="#"><img src="images/footer-logo.png" alt="footer logo"></a>
-                            </div> -->
-                            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution.</p>
+                            <div class="footer-logo">
+                                <a href="#"><img src="images/small_logo.png" alt="footer logo"></a>
+                            </div>
+                            <p>Road To Digital World.</p>
                         </div>
                     </div>
                 </div>
@@ -695,7 +754,7 @@
                     <div class="single-footer-item">
                         <h4>Contact</h4>
                         <ul class="footer-contact-info">
-                            <li><a href="tel:+212521222222">+212 521 222 222</a></li>
+                            <li><a href="tel:+212687392174">+212 687-392-174</a></li>
                             <li><a href="mailto:contact@paginale.com">contact@paginale.com</a></li>
                             <li><a href="#">42, Adelkarim kattabi, Marrakesh, Morocco</a></li>
                         </ul>
