--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div class="row hero-area-row">
                 <div class="col-lg-6 hero-content-col">
                     <div class="hero-content-area">
-                        <h1 class="wow animate__animated animate__fadeInRight" data-wow-duration="2s" data-wow-delay="0.2s"><span>Paginale</span>Road To A Digital Future</h1>
+                        <h1 class="wow animate__animated animate__fadeInRight" data-wow-duration="2s" data-wow-delay="0.2s"><span>Paginale</span>Road To A Digital World</h1>
                         <p class="wow animate__animated animate__fadeInRight" data-wow-duration="2s" data-wow-delay="0.2s">Discover our IT services and solutions, and join the community...</p>
                         <div class="hero-btn-area wow animate__animated animate__fadeInRight" data-wow-duration="2.5s" data-wow-delay="0.2.5s">
                             <a href="#" class="button-btn">Get Started</a>
