--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <h1 class="wow animate__animated animate__fadeInRight" data-wow-duration="2s" data-wow-delay="0.2s"><span>Paginale</span>Road To A Digital World</h1>
                         <p class="wow animate__animated animate__fadeInRight" data-wow-duration="2s" data-wow-delay="0.2s">Discover our IT services and solutions, and join the community...</p>
                         <div class="hero-btn-area wow animate__animated animate__fadeInRight" data-wow-duration="2.5s" data-wow-delay="0.2.5s">
-                            <a href="#" class="button-btn">Get Started</a>
+                            <a href="#services-area" class="button-btn">Get Started</a>
                         </div>
                     </div>
                 </div>
@@ -297,9 +297,7 @@
             </div>
         </div>
     </section>
-    <!-- boots area end -->
-    <!-- flexible area start -->
-    <section id="pricing-area" class="flexible-area">
+    <!-- <section id="pricing-area" class="flexible-area">
         <div class="flexible-shape-1"></div>
         <div class="container">
             <div class="row flexible-top-row wow animate__animated animate__zoomIn" data-wow-duration="1s">
@@ -318,7 +316,6 @@
                 </div>
             </div>
             <div class="row flexible-price-row wrapper-full" id="monthly">
-                <!-- monthly price list content -->
                 <div class="col-md-6 col-lg-4 flexible-price-item">
                     <div class="flexible-price-single-item wow animate__animated animate__zoomIn" data-wow-duration="1s">
                         <h4>Personal ($10)</h4>
@@ -382,10 +379,8 @@
                         </div>
                     </div>
                 </div>
-                <!-- monthly price list content -->
             </div>
             <div class="row flexible-price-row wrapper-full hide" id="yearly">
-                <!-- yearly price list content -->
                 <div class="col-md-6 col-lg-4 flexible-price-item">
                     <div class="flexible-price-single-item wow animate__animated animate__zoomIn" data-wow-duration="1s">
                         <h4>Personal ($30)</h4>
@@ -446,11 +441,10 @@
                         </div>
                     </div>
                 </div>
-                <!-- yearly price list content -->
             </div>
         </div>
         <div class="flexible-shape-2"></div>
-    </section>
+    </section> -->
     <!-- flexible area end -->
     <!--  team area start -->
     <section id="team-area" class="our-team-area">
@@ -470,6 +464,21 @@
                         </div>
                         <h3>El attar Zakaria</h3>
                         <a href="#" class="position">Chief Executive Officer</a>
+                        <ul class="team-social-area">
+                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a href="#"><i class="fas fa-envelope"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 team-item-col">
+                    <div class="team-single-item wow animate__animated animate__fadeInUp" data-wow-duration="1.5s">
+                        <div class="image">
+                            <img src="images/ellina.png" alt="ellina">
+                        </div>
+                        <h3>El hachimi Amine</h3>
+                        <a href="#" class="position">Chief Technical Officer</a>
                         <ul class="team-social-area">
                             <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                             <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -525,7 +534,8 @@
                                 </div>
                             </div>
                             <h4>Great Work !!!</h4>
-                            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more.
+                            <p>
+                                The website that you built for us, increased our sales by over 50%.
                             </p>
                         </div>
                     </div>
@@ -555,8 +565,9 @@
                                     </ul>
                                 </div>
                             </div>
-                            <h4>Love it !!!</h4>
-                            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more.
+                            <h4>Great Mobile App</h4>
+                            <p>
+                                I didn't expect all this,beautiful app, functional and easy to use.
                             </p>
                         </div>
                     </div>
@@ -586,8 +597,8 @@
                                     </ul>
                                 </div>
                             </div>
-                            <h4>Love it !!!</h4>
-                            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more.
+                            <h4>Strong Support</h4>
+                            <p>What i love about your business is the support, 7 days. You guys are awesome</p>
                             </p>
                         </div>
                     </div>
@@ -617,42 +628,13 @@
                                     </ul>
                                 </div>
                             </div>
-                            <h4>Quick Support !!!</h4>
-                            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more.
+                            <h4>Optimized architecture</h4>
+                            <p>
+                                As a CEO and CTO of 212 services, I have to say that you guys are the best technically, the latest technologies for your products.
                             </p>
                         </div>
                     </div>
-                    <div class="testimonial-item-col">
-                        <div class="testimonial-single-item">
-                            <div class="testimonial-item-header">
-                                <img class="testimonial-img" src="images/tisa.png" alt="tisa">
-                                <div class="testimonial-header-position">
-                                    <h3>Emily <img src="images/check.png" alt="check icon"> </h3>
-                                    <p>Product Manager, Deso</p>
-                                    <ul class="star-icon">
-                                        <li>
-                                            <a href="#"><img src="images/star-icon.png" alt="star icon"></a>
-                                        </li>
-                                        <li>
-                                            <a href="#"><img src="images/star-icon.png" alt="star icon"></a>
-                                        </li>
-                                        <li>
-                                            <a href="#"><img src="images/star-icon.png" alt="star icon"></a>
-                                        </li>
-                                        <li>
-                                            <a href="#"><img src="images/star-icon.png" alt="star icon"></a>
-                                        </li>
-                                        <li>
-                                            <a href="#"><img src="images/star-icon.png" alt="star icon"></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <h4>Great Work !!!</h4>
-                            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more.
-                            </p>
-                        </div>
-                    </div>
+
 
                 </div>
             </div>
