--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Paginale" />
 
-    <title>Paginale - IT Services, Mobile apps, Web2.0 and Web3.0 Apps</title>
+    <title>Paginale - IT Services, Mobile apps, Web2.0 and Web3.0 Apps - Home</title>
 
     <!-- css link -->
     <!-- favicon icon -->
@@ -108,11 +108,11 @@
                                 <li><a href="#">Home</a></li>
                                 <li><a href="#services-area">Services</a></li>
                                 <li>
-                                    <a href="#team-area">Investors</a>
+                                    <a href="https://paginale.com/investors.html">Investors</a>
                                 </li>
-                                <li><a href="#testimonial-area">Career</a></li>
-                                <li><a href="#testimonial-area">Contact</a></li>
-                                <li class="menu-btn"><a href="#contact" class="button-btn">Estimate your service</a></li>
+                                <li><a href="https://paginale.com/careers.html">Careers</a></li>
+                                <li><a href="#contact">Contact</a></li>
+                                <li class="menu-btn"><a href="https://paginale.com/estimate.html" class="button-btn">Estimate your service</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -265,7 +265,7 @@
         <div class="services-shape-3"></div>
         <div class="services-shape-2"></div>
     </section>
-    <section class="boosts-area">
+    <section class="boosts-area" id="estimate">
         <div class="container">
             <div class="row boosts-top-row">
                 <div class="col-lg-6 boosts-content-col wow animate__animated animate__fadeInLeft" data-wow-duration="1.5s">
@@ -273,8 +273,7 @@
                         <h2><span>Ready to Go</span>Estimate your service for free
                         </h2>
                     </div>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the major ity have suffered alteration in some form, by injected humour, or rand om ised words which don't look even slightly believable. If you are going to use a
-                        pass age of Lorem Ipsum, you need to be sure there isn't anything embarrass ing hidden in the middle of text. All the Lorem Ipsum generators on the Inter net tend to repeat</p>
+                    <p>Our free tool help you to get an approximative price for your service.</p>
                     <!-- <div class="web-adress-input">
                             <input type="select" placeholder="Your Website Address" required="">
                             <button type="submit" class="button-btn">Check Now</button>
@@ -284,7 +283,6 @@
                                 <option value="">I want a static website</option>
                                 <option value="">I want a web app</option>
                                 <option value="">I want a mobile app</option>
-                                <option value="">I want a Dapp</option>
                                 <option value="">I want a Dapp</option>
                             </select>
                         <button class="mx-auto button-btn mt-2">Estimate</button>
