--- a/investors.html
+++ b/investors.html
@@ -94,13 +94,13 @@
                     <div class="col-lg-9 menu-col align-self-center">
                         <nav id="main-menu" class="main-menu">
                             <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#services-area">Services</a></li>
+                                <li><a href="https://paginale.com/index.html">Home</a></li>
+                                <li><a href="https://paginale.com/index.html#services-area">Services</a></li>
                                 <li>
                                     <a href="https://paginale.com/investors.html">Investors</a>
                                 </li>
                                 <li><a href="https://paginale.com/careers.html">Careers</a></li>
-                                <li><a href="#contact">Contact</a></li>
+                                <li><a href="https://paginale.com/index.html#contact">Contact</a></li>
                                 <li class="menu-btn"><a href="https://paginale.com/estimate.html" class="button-btn">Estimate your service</a></li>
                             </ul>
                         </nav>
